--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -155,9 +155,9 @@ jobs:
             --docker-password=${{ secrets.REGISTRY_PASSWORD }} \
             --dry-run=client -o yaml | kubectl apply -f -
 
-      - name: Deploy to Kubernetes
-        run: |
-          kubectl apply -f k8s/user.yml
+      # - name: Deploy to Kubernetes
+      #   run: |
+      #     kubectl apply -f k8s/user.yml
 
       # - name: Check Pods status
       #   run: kubectl get pods -A
@@ -166,8 +166,8 @@ jobs:
       #   run: |
       #     kubectl get svc
 
-      - name: Wait for services
-        run: sleep 20
+      # - name: Wait for services
+      #   run: sleep 20
 
       - name: Deploy nginx
         run: |
