--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -22,6 +22,7 @@ spec:
           volumeMounts:
             - name: nginx-config
               mountPath: /etc/nginx/conf.d/nginx.conf
+              subPath: nginx.conf
       volumes:
         - name: nginx-config
           configMap:
