--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -21,7 +21,7 @@ spec:
             - containerPort: 80
           volumeMounts:
             - name: nginx-config
-              mountPath: /etc/nginx/conf.d/nginx.conf
+              mountPath: /etc/nginx/nginx.conf
               subPath: nginx.conf
       volumes:
         - name: nginx-config
