--- a/nginx.conf
+++ b/nginx.conf
@@ -18,9 +18,9 @@ http {
     #     server admin-service:8000;
     # }
 
-    # upstream user_service {
-    #     server user-service.default.svc.cluster.local:8000;
-    # }
+    upstream user_service {
+        server user-service.default.svc.cluster.local:8000;
+    }
 
     server {
         listen 80;
@@ -42,8 +42,8 @@ http {
         #     proxy_pass http://admin_service/;
         # }
 
-        # location /user/ {
-        #     proxy_pass http://user_service/;
-        # }
+        location /user/ {
+            proxy_pass http://user_service/;
+        }
     }
 }
