--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,8 @@ http {
     # }
 
     upstream user_service {
-        server user-service.default.svc.cluster.local:8000;
+        # server user-service.default.svc.cluster.local:8000;
+        # server user-service.default.svc.cluster.local:8000;
     }
 
     server {
@@ -43,7 +44,8 @@ http {
         # }
 
         location /user/ {
-            proxy_pass http://user_service/;
+            # proxy_pass http://user_service/;
+            proxy_pass google.com;
         }
     }
 }
