--- a/nginx.conf
+++ b/nginx.conf
@@ -42,8 +42,9 @@ http {
         #     proxy_pass http://admin_service/;
         # }
 
-        # location /user/ {
+        location /user/ {
             # proxy_pass http://user_service/;
-        # }
+            proxy_pass http://google.com;
+        }
     }
 }
