--- a/nginx.conf
+++ b/nginx.conf
@@ -18,9 +18,9 @@ http {
     #     server admin-service:8000;
     # }
 
-    # upstream user_service {
-        # server user-service.default.svc.cluster.local:8000;
-    # }
+    upstream user_service {
+        server user-service.default.svc.cluster.local:8000;
+    }
 
     server {
         listen 80;
@@ -44,7 +44,6 @@ http {
 
         location /user/ {
             # proxy_pass http://user_service/;
-            proxy_pass http://google.com;
         }
     }
 }
