--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
         # }
 
         location /user/ {
-            # proxy_pass http://user_service/;
+            proxy_pass http://user_service/;
         }
     }
 }
