--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -159,12 +159,12 @@ jobs:
       #   run: |
       #     kubectl apply -f k8s/user.yml
 
-      - name: Check Pods status
-        run: kubectl get pods -A
+      # - name: Check Pods status
+      #   run: kubectl get pods -A
 
-      - name: Test Services
-        run: |
-          kubectl get svc
+      # - name: Test Services
+      #   run: |
+      #     kubectl get svc
 
       # - name: Wait for services
       #   run: sleep 20
