--- a/nginx.conf
+++ b/nginx.conf
@@ -2,21 +2,21 @@ events {}
 
 http {
     
-    # upstream auth_service {
-    #     server auth-service:8000;
-    # }
+    upstream auth_service {
+        server auth-service:8000;
+    }
 
-    # upstream product_service {
-    #     server product-service:8000;
-    # }
+    upstream product_service {
+        server product-service:8000;
+    }
 
-    # upstream order_service {
-    #     server order-service:8000;
-    # }
+    upstream order_service {
+        server order-service:8000;
+    }
 
-    # upstream admin_service {
-    #     server admin-service:8000;
-    # }
+    upstream admin_service {
+        server admin-service:8000;
+    }
 
     upstream user_service {
         server user-service:8000;
@@ -26,21 +26,21 @@ http {
         listen 80;
         server_name _;
 
-        # location /auth/ {
-        #     proxy_pass http://auth_service/;
-        # }
+        location /auth/ {
+            proxy_pass http://auth_service/;
+        }
 
-        # location /product/ {
-        #     proxy_pass http://product_service/;
-        # }
+        location /product/ {
+            proxy_pass http://product_service/;
+        }
 
-        # location /order/ {
-        #     proxy_pass http://order_service/;
-        # }
+        location /order/ {
+            proxy_pass http://order_service/;
+        }
 
-        # location /admin/ {
-        #     proxy_pass http://admin_service/;
-        # }
+        location /admin/ {
+            proxy_pass http://admin_service/;
+        }
 
         location /user/ {
             proxy_pass http://user_service/;
