--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,10 +82,10 @@ jobs:
       #     docker build -t ${{ secrets.REGISTRY }}/admin:latest ./admin_service
       #     docker push ${{ secrets.REGISTRY }}/admin:latest
 
-      # - name: Build and Push user-service
-      #   run: |
-      #     docker build -t ${{ secrets.REGISTRY }}/user:latest ./user_service
-      #     docker push ${{ secrets.REGISTRY }}/user:latest
+      - name: Build and Push user-service
+        run: |
+          docker build -t ${{ secrets.REGISTRY }}/user:latest ./user_service
+          docker push ${{ secrets.REGISTRY }}/user:latest
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
@@ -147,17 +147,17 @@ jobs:
         run: |
           kubectl create configmap nginx-config --from-file=nginx.conf --dry-run=client -o yaml | kubectl apply -f -
 
-      # - name: Create Docker registry secret
-      #   run: |
-      #     kubectl create secret docker-registry arvan-regcred \
-      #       --docker-server=${{ secrets.REGISTRY }} \
-      #       --docker-username=${{ secrets.REGISTRY_USERNAME }} \
-      #       --docker-password=${{ secrets.REGISTRY_PASSWORD }} \
-      #       --dry-run=client -o yaml | kubectl apply -f -
+      - name: Create Docker registry secret
+        run: |
+          kubectl create secret docker-registry arvan-regcred \
+            --docker-server=${{ secrets.REGISTRY }} \
+            --docker-username=${{ secrets.REGISTRY_USERNAME }} \
+            --docker-password=${{ secrets.REGISTRY_PASSWORD }} \
+            --dry-run=client -o yaml | kubectl apply -f -
 
-      # - name: Deploy to Kubernetes
-      #   run: |
-      #     kubectl apply -f k8s/user.yml
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl apply -f k8s/
 
       # - name: Check Pods status
       #   run: kubectl get pods -A
@@ -169,9 +169,9 @@ jobs:
       # - name: Wait for services
       #   run: sleep 20
 
-      - name: Deploy nginx
-        run: |
-          kubectl apply -f k8s/nginx.yml
+      # - name: Deploy nginx
+      #   run: |
+      #     kubectl apply -f k8s/nginx.yml
 
       - name: Restart nginx to pick up new config
         run: |
