--- a/k8s/postgresql.yml
+++ b/k8s/postgresql.yml
@@ -30,9 +30,9 @@ spec:
           image: postgres
           ports:
             - containerPort: 5432
-          envFrom:
-            - configMapRef:
-                name: app-config
+          # envFrom:
+          #   - configMapRef:
+          #       name: app-config
           volumeMounts:
             - name: pg-storage
               mountPath: /var/lib/postgresql/data
