--- a/k8s/user.yml
+++ b/k8s/user.yml
@@ -19,9 +19,9 @@ spec:
           image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/user:latest
           ports:
             - containerPort: 8000
-          # envFrom:
-          #   - configMapRef:
-          #       name: app-config
+          envFrom:
+            - configMapRef:
+                name: app-config
 ---
 apiVersion: v1
 kind: Service
