--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,7 +133,7 @@ jobs:
 
       - name: Apply app-config ConfigMap from file
         run: |
-          kubectl create configmap app-config --from-file=.env --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create configmap app-config --from-env-file=.env --dry-run=client -o yaml | kubectl apply -f -
 
       - name: Apply nginx ConfigMap from file
         run: |
@@ -149,7 +149,7 @@ jobs:
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k8s
+          kubectl apply -f k8s/
 
       - name: Restart nginx to pick up new config
         run: |
