--- a/k8s/order.yml
+++ b/k8s/order.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: user
+  name: order
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: user
+      app: order
   template:
     metadata:
       labels:
-        app: user
+        app: order
     spec:
       imagePullSecrets:
         - name: arvan-regcred
       containers:
-        - name: user
-          image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/user:latest
+        - name: order
+          image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/order:latest
           ports:
             - containerPort: 8000
           envFrom:
@@ -26,12 +26,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: user-service
+  name: order-service
 spec:
   type: ClusterIP
   selector:
-    app: user
+    app: order
   ports:
     - protocol: TCP
-    - port: 8000
+      port: 8000
       targetPort: 8000
