--- a/k8s/postgresql.yml
+++ b/k8s/postgresql.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pg-pvc
+  name: postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
@@ -12,23 +12,23 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pg
+  name: postgres
   labels:
-    app: pg
+    app: postgres
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: pg
+      app: postgres
   template:
     metadata:
       labels:
-        app: pg
+        app: postgres
     spec:
       securityContext:
         fsGroup: 999
       containers:
-        - name: pg
+        - name: postgres
           image: postgres:latest
           ports:
             - containerPort: 5432
@@ -36,21 +36,21 @@ spec:
             - configMapRef:
                 name: app-config
           volumeMounts:
-            - name: pg-storage
+            - name: postgres-storage
               mountPath: /var/lib/postgresql/data
       volumes:
-        - name: pg-storage
+        - name: postgres-storage
           persistentVolumeClaim:
-            claimName: pg-pvc
+            claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: pg-service
+  name: postgres-service
 spec:
   type: ClusterIP
   selector:
-    app: pg
+    app: postgres
   ports:
     - protocol: TCP
       port: 5432
