--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -33,10 +33,11 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
-  type: LoadBalancer
   selector:
     app: nginx
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
+  type: LoadBalancer
