--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -33,11 +33,37 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
+  type: ClusterIP
   selector:
     app: nginx
   ports:
-    - name: http
-      protocol: TCP
+    - protocol: TCP
       port: 80
       targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  type: ClusterIP
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-load-balancer-service
+spec:
   type: LoadBalancer
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
