--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -44,12 +44,25 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-load-balancer-service
+  name: nginx-nodeport
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: nginx
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
+      nodePort: 80
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: nginx-load-balancer-service
+# spec:
+#   type: LoadBalancer
+#   selector:
+#     app: nginx
+#   ports:
+#     - protocol: TCP
+#       port: 80
+#       targetPort: 80
