--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -44,25 +44,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-nodeport
+  name: nginx-load-balancer-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: nginx
   ports:
     - protocol: TCP
+      nodePort: 40080
       port: 80
       targetPort: 80
-      nodePort: 80
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: nginx-load-balancer-service
-# spec:
-#   type: LoadBalancer
-#   selector:
-#     app: nginx
-#   ports:
-#     - protocol: TCP
-#       port: 80
-#       targetPort: 80
