--- a/k8s/product.yml
+++ b/k8s/product.yml
@@ -13,7 +13,7 @@ spec:
         app: product
     spec:
       imagePullSecrets:
-        - name: arvan-regcred
+        - name: registry-secret
       containers:
         - name: product
           image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/product:latest
