--- a/k8s/admin.yml
+++ b/k8s/admin.yml
@@ -13,7 +13,7 @@ spec:
         app: admin
     spec:
       imagePullSecrets:
-        - name: arvan-regcred
+        - name: registry-secret
       containers:
         - name: admin
           image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/admin:latest
