--- a/k8s/order.yml
+++ b/k8s/order.yml
@@ -13,7 +13,7 @@ spec:
         app: order
     spec:
       imagePullSecrets:
-        - name: arvan-regcred
+        - name: registry-secret
       containers:
         - name: order
           image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/order:latest
