--- a/k8s/auth.yml
+++ b/k8s/auth.yml
@@ -16,7 +16,7 @@ spec:
         - name: registry-secret
       containers:
         - name: auth
-          image: ${{ secrets.REGISTRY }}/auth:latest
+          image: auth:latest
           ports:
             - containerPort: 8000
           envFrom:
