--- a/k8s/order.yml
+++ b/k8s/order.yml
@@ -16,7 +16,7 @@ spec:
         - name: registry-secret
       containers:
         - name: order
-          image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/order:latest
+          image: order:latest
           ports:
             - containerPort: 8000
           envFrom:
