--- a/k8s/user.yml
+++ b/k8s/user.yml
@@ -16,7 +16,7 @@ spec:
         - name: registry-secret
       containers:
         - name: user
-          image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/user:latest
+          image: user:latest
           ports:
             - containerPort: 8000
           envFrom:
