--- a/k8s/product.yml
+++ b/k8s/product.yml
@@ -16,7 +16,7 @@ spec:
         - name: registry-secret
       containers:
         - name: product
-          image: product:latest
+          image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/product:latest
           ports:
             - containerPort: 8000
           envFrom:
