--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,11 @@ services:
     env_file:
       - .env
     depends_on:
-      - mongo-db
-      - postgres-db
-    expose:
-      - ${INTERNAL_FASTAPI_PORT}
-    command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
+      - mongodb-service
+      - postgres-service
+    # expose:
+    #   - ${INTERNAL_FASTAPI_PORT}
+    # command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
 
   product-service:
     working_dir: /app
@@ -41,11 +41,11 @@ services:
     env_file:
       - .env
     depends_on:
-      - mongo-db
-      - postgres-db
-    expose:
-      - ${INTERNAL_FASTAPI_PORT}
-    command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
+      - mongodb-service
+      - postgres-service
+    # expose:
+    #   - ${INTERNAL_FASTAPI_PORT}
+    # command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
 
   order-service:
     working_dir: /app
@@ -57,11 +57,11 @@ services:
     env_file:
       - .env
     depends_on:
-      - mongo-db
-      - postgres-db
-    expose:
-      - ${INTERNAL_FASTAPI_PORT}
-    command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
+      - mongodb-service
+      - postgres-service
+    # expose:
+    #   - ${INTERNAL_FASTAPI_PORT}
+    # command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
 
   admin-service:
     working_dir: /app
@@ -73,11 +73,11 @@ services:
     env_file:
       - .env
     depends_on:
-      - mongo-db
-      - postgres-db
-    expose:
-      - ${INTERNAL_FASTAPI_PORT}
-    command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
+      - mongodb-service
+      - postgres-service
+    # expose:
+    #   - ${INTERNAL_FASTAPI_PORT}
+    # command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
 
   user-service:
     working_dir: /app
@@ -89,11 +89,11 @@ services:
     env_file:
       - .env
     depends_on:
-      - mongo-db
-      - postgres-db
-    expose:
-      - ${INTERNAL_FASTAPI_PORT}
-    command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
+      - mongodb-service
+      - postgres-service
+    # expose:
+    #   - ${INTERNAL_FASTAPI_PORT}
+    # command: ["fastapi", "run", "./src/main.py", "--port", "${INTERNAL_FASTAPI_PORT}"]
 
   # Mongo-db
   mongodb-service:
@@ -128,7 +128,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - postgres-db
+      - postgres-service
 
   prometheus:
     image: prom/prometheus:latest
