--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
 
     server {
         listen 80;
-        server_name _;
+        server_name localhost;
 
         location /auth/ {
             proxy_pass http://auth_service/;
