--- a/k8s/postgresql.yml
+++ b/k8s/postgresql.yml
@@ -36,6 +36,7 @@ spec:
           volumeMounts:
             - name: postgres-db-storage
               mountPath: /bitnami/postgresql
+              subPath: pgdata
       volumes:
         - name: postgres-db-storage
           persistentVolumeClaim:
