--- a/k8s/postgresql.yml
+++ b/k8s/postgresql.yml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
         - name: postgres-db
-          image: postgres
+          image: postgres:15-alpine
           ports:
             - containerPort: 5432
           envFrom:
