--- a/k8s/services/prometheus.yml
+++ b/k8s/services/prometheus.yml
@@ -25,6 +25,8 @@ spec:
       labels:
         app: prometheus
     spec:
+      securityContext:
+        fsGroup: 65534
       containers:
         - name: prometheus
           image: prom/prometheus:latest
