--- a/k8s/databases/postgresql.yml
+++ b/k8s/databases/postgresql.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-db-pvc
+  name: postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
@@ -12,21 +12,21 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres-db
+  name: postgres
   labels:
-    app: postgres-db
+    app: postgres
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres-db
+      app: postgres
   template:
     metadata:
       labels:
-        app: postgres-db
+        app: postgres
     spec:
       containers:
-        - name: postgres-db
+        - name: postgres
           image: postgres:15-alpine
           ports:
             - containerPort: 5432
@@ -34,12 +34,12 @@ spec:
             - configMapRef:
                 name: app-config
           volumeMounts:
-            - name: postgres-db-storage
+            - name: postgres-storage
               mountPath: /var/lib/postgresql/data
       volumes:
-        - name: postgres-db-storage
+        - name: postgres-storage
           persistentVolumeClaim:
-            claimName: postgres-db-pvc
+            claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
@@ -48,7 +48,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: postgres-db
+    app: postgres
   ports:
     - protocol: TCP
       port: 5432
